crates/tokmd-format/tests/snapshots/snapshot_w74__w74_lang_md_empty_with_files.snap
---
source: crates/tokmd-format/tests/snapshot_w74.rs
expression: out
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|**Total**|0|0|0|0|0|0|
