crates/tokmd-format/tests/snapshots/snapshot_w74__w74_lang_md_single_lang.snap
---
source: crates/tokmd-format/tests/snapshot_w74.rs
expression: out
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|Python|920|1180|7|27600|9200|168|
|**Total**|920|1180|7|27600|9200|168|
